many small changes

--- a/templates/video.html
+++ b/templates/video.html
@@ -44,7 +44,7 @@
                 body: formData,
             })
                 .then(response => window.location.replace("/me"))
-                .catch((error) => console.log(error));
+                .catch((error) => alert(error));
 
     }
     </script>
