--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>UrFUbe</title>
   <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.8.3/video.min.js"></script>
+  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
 </head>
 <body>
 <video
@@ -15,10 +17,7 @@
     height="780"
     data-setup="{}"
   >
-    <source src="http://127.0.0.1:8000/video/{{path}}" type="{{type}}" />
-    <source src="http://127.0.0.1:8000/video/{{path}}" type="video/webm" />
+    <source src="/video/{{path}}" type="video/mp4" />
   </video>
-
-  <script src="https://vjs.zencdn.net/7.10.2/video.min.js"></script>
 </body>
 </html>
